--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "ejs": "~0.8.8",
     "express-load": "~1.1.14",
     "method-override": "~2.3.1",
-    "body-parser": "~1.12.0"
+    "body-parser": "~1.12.0",
+    "mongodb": "~1.4.32",
+    "mongoose": "~3.8.24"
   }
 }
